--- a/public/about.html
+++ b/public/about.html
@@ -308,6 +308,9 @@
                     che crea dipendenza.
                 </p>
             </div>
+            <div class="max-w-7xl mx-auto px-6 pt-8 flex justify-center">
+                <img src="../assets/images/Logo bianco.png" alt="ADM Logo" class="h-16 object-contain opacity-80">
+            </div>
         </footer>
     </div>
     <script src="../src/js/modules/age-verification.js"></script>
