--- a/public/contact.html
+++ b/public/contact.html
@@ -259,6 +259,9 @@
 <a class="hover:text-primary transition-colors underline" href="#">Cookie Settings</a>
 </div>
 </div>
+<div class="max-w-[1440px] mx-auto pt-8 flex justify-center">
+    <img src="../assets/images/Logo bianco.png" alt="ADM Logo" class="h-16 object-contain opacity-80">
+</div>
 </div>
 </footer>
     <script src="../src/js/modules/age-verification.js"></script>
