--- a/public/brands.html
+++ b/public/brands.html
@@ -268,6 +268,9 @@
                     <a class="hover:text-primary transition-colors" href="#">Shipping &amp; Returns</a>
                 </div>
             </div>
+            <div class="max-w-[1440px] mx-auto pt-8 flex justify-center">
+                <img src="../assets/images/Logo bianco.png" alt="ADM Logo" class="h-16 object-contain opacity-80">
+            </div>
         </div>
     </footer>
     <!-- Firebase SDK (Legacy for Realtime Database) -->
