Add SumUp integration and update admin features

--- a/admin/dashboard.html
+++ b/admin/dashboard.html
@@ -82,6 +82,10 @@
 <span class="material-symbols-outlined">shopping_cart</span>
 <p class="text-sm font-medium">Orders</p>
 </a>
+<a class="flex items-center gap-3 px-3 py-2.5 rounded-lg text-slate-600 dark:text-[#baba9c] hover:bg-slate-100 dark:hover:bg-[#2a2a1a] transition-colors" href="payments/index.html">
+<span class="material-symbols-outlined">payments</span>
+<p class="text-sm font-medium">Payments</p>
+</a>
 <a class="flex items-center gap-3 px-3 py-2.5 rounded-lg text-slate-600 dark:text-[#baba9c] hover:bg-slate-100 dark:hover:bg-[#2a2a1a] transition-colors" href="services/index.html">
 <span class="material-symbols-outlined">room_service</span>
 <p class="text-sm font-medium">Services</p>
